[package]
name = "mbrs"
version = "0.2.2"
edition = "2021"
authors = ["Stefan Volz <volzstefan97+mbrs@googlemail.com>"]
description = "Master boot record parsing, manipulation and binary export"
readme = "README.md"
repository = "https://github.com/SV-97/mbrs"
license = "MIT OR Apache-2.0"
keywords = ["master_boot_record", "MBR", "raspberry-pi", "msdos", "parsing"]
categories = [
    "parser-implementations",
    "filesystem",
    "no-std",
    "no-std::no-alloc",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arbitrary-int = "1.2.6"
arrayref = "0.3.7"
thiserror-no-std = "2.0.2"

[features]
default = ["std"]
std = []
